Melhorando estilo, preciso ver a questão do menuMobile, ele tá meio esquisito

--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.css
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.css
@@ -73,6 +73,10 @@ nav ul li a:active {
         padding: 10px 0;
     }
 
+    #menuPrincipal {
+        gap: 15px;
+    }
+
     /* Submenu alinhado corretamente abaixo do menu */
     #subMenu {
         margin-left: 0;
