--- a/ifac_si_app/src/app/component/notification/notification.component.html
+++ b/ifac_si_app/src/app/component/notification/notification.component.html
@@ -4,7 +4,7 @@
     [class.deleteView]="notification.action === 'DELETE'"
     [class.addView]="notification.action === 'POST'"
     [class.updateView]="notification.action === 'UPDATE'"
-    (click)="alertTeste()">
+    (click)="alertTeste(notification)">
         <div id="avatar-notification">
             <div class="avatar-circle">
                 <img src="../../../assets/images/avatar.png" alt="Avatar do usuário">
