Adicionando alguns dados para mostrar em comparationView, apenas dados falsos por enquanto

--- a/ifac_si_app/src/app/component/comparation-view/comparation-view.component.html
+++ b/ifac_si_app/src/app/component/comparation-view/comparation-view.component.html
@@ -1,1 +1,9 @@
-<p>comparation-view works!</p>
+<main>
+    <section>
+        <p>{{notification.title}}</p>
+    </section>
+    <section>
+        <p>{{notificationEdit.title}}</p>
+    </section>
+        <p>{{notification.userName}}</p>
+</main>
