Resolvendo problema de alerta não aparecer

--- a/ifac_si_app/src/app/component/alerta/alerta.component.css
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.css
@@ -41,6 +41,9 @@ div.alerta.sucesso {
     border-color: #365837;
 }
 
+.alerta.fade-out {
+    opacity: 0;
+}
 /* div.alerta.inativo {
     display: none;
 } */
