Melhorando estilização de alerta

--- a/ifac_si_app/src/app/component/alerta/alerta.component.html
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.html
@@ -1,4 +1,4 @@
-<div class="alerta" [class.fade-out]="fadeOut" *ngIf="show">
+<div class="alerta {{ getTipoAlerta().toLowerCase() }} {{ fadeOut ? 'fade-out' : '' }}" *ngIf="show">
     <span id="fechar" (click)="fecharAlerta()">&times;</span>
     <span id="mensagem">{{ getMensagemAlerta() }}</span>
 </div>
