--- a/ifac_si_app/src/app/component/alerta/alerta.component.css
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.css
@@ -2,7 +2,7 @@ div.alerta {
     top: 20px;
     right: 20px;
     /* margin: 10px; */
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
     z-index: 100001;
     position: fixed;
     display: flex;
@@ -14,7 +14,7 @@ div.alerta {
     max-width: 400px;
     margin: 1em auto;
     word-wrap: break-word;
-    border-left: 5px solid #623CEA;
+    /* border-left: 5px solid #623CEA; */
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 4px;
     /* border-width: 10px; */
@@ -31,14 +31,23 @@ div.alerta span#fechar {
 
 div.alerta.erro {
     background-color: #f1b0b9;
-    color: #c84b4b;
-    border-color: #c84b4b;
+    color: #830505;
+    font-weight: 600;
+    border-left: 5px solid #c84b4b;
 }
 
 div.alerta.sucesso {
     background-color: #97c6a8;
-    color: #365837;
-    border-color: #365837;
+    color: #0e4d10;
+    font-weight: 600;
+    border-left: 5px solid #365837;
+}
+
+div.alerta.atencao {
+    background-color: #7fd2d8;
+    color: #364d58;
+    font-weight: 600;
+    border-left: 5px solid #446085;
 }
 
 .alerta.fade-out {
