Adicionando efeito de contagem na borda, para demonstrar que o alerta vai ficar apenas por um tempo

--- a/ifac_si_app/src/app/component/alerta/alerta.component.html
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.html
@@ -1,4 +1,6 @@
 <div class="alerta {{ getTipoAlerta().toLowerCase() }} {{ fadeOut ? 'fade-out' : '' }}" *ngIf="show">
     <span id="fechar" (click)="fecharAlerta()">&times;</span>
     <span id="mensagem">{{ getMensagemAlerta() }}</span>
+    <div class="loader-barra"></div>
 </div>
+  
