--- a/ifac_si_app/src/app/component/alerta/alerta.component.css
+++ b/ifac_si_app/src/app/component/alerta/alerta.component.css
@@ -53,6 +53,25 @@ div.alerta.atencao {
 .alerta.fade-out {
     opacity: 0;
 }
+
+.loader-barra {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    background-color: rgba(0, 0, 0, 0.2);
+    animation: barraTempo 3s linear forwards;
+    border-radius: 0 0 4px 4px;
+  }
+  
+@keyframes barraTempo {
+    from {
+      width: 100%;
+    }
+    to {
+      width: 0%;
+    }
+}
 /* div.alerta.inativo {
     display: none;
 } */
