--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -61,51 +61,76 @@
                         <div class="viewPost" id="statusPost">
                             <div class="statusDiv">
                                 <p>Visibilidade:</p>
-                                <ng-container *ngIf="visibilidadeContent; else visibilidadeSelect">
-                                    <p id="visibilidade">
-                                      {{ post.visibilidade ? post.visibilidade : 'Público' }}
-                                      <button (click)="toggleVisibilidade()" class="editButton">Editar</button>
-                                    </p>
-                                </ng-container>
-                                <ng-template #visibilidadeSelect>
-                                    <select id="visibilidadeSelect" [(ngModel)]="selectedVisibilidade">
-                                        <option *ngFor="let option of visibilidadeOptions" [ngValue]="option.value">
-                                            {{ option.label }}
-                                        </option>
-                                    </select>
-                                    <button (click)="confirmarVisibilidade()" class="editButton">Confirmar</button>
-                                    <button (click)="toggleVisibilidade()" class="editButton">Cancelar</button>
-                                </ng-template>
+                                <div>
+                                    <ng-container *ngIf="visibilidadeContent; else visibilidadeSelect">
+                                        <p id="visibilidade">
+                                        {{ post.visibilidade ? post.visibilidade : 'Público' }}
+                                        <button (click)="toggleVisibilidade()" class="editButton">Editar</button>
+                                        </p>
+                                    </ng-container>
+                                    <ng-template #visibilidadeSelect>
+                                        <select id="visibilidadeSelect" [(ngModel)]="selectedVisibilidade">
+                                            <option *ngFor="let option of visibilidadeOptions" [ngValue]="option.value">
+                                                {{ option.label }}
+                                            </option>
+                                        </select>
+                                        <button (click)="confirmarVisibilidade()" class="editButton">Confirmar</button>
+                                        <button (click)="toggleVisibilidade()" class="editButton">Cancelar</button>
+                                    </ng-template>
+                                </div>
                                 
                             </div>
                             <div class="statusDiv">
                                 <p>Publicação:</p>
-                                <ng-container *ngIf="publicacaoContent; else publicacaoSelect">
-                                    <p id="publicacao">
-                                      {{ post.publicacao ? post.publicacao : 'Imediata' }}
-                                    </p>
-                                    <button (click)="togglePublicacao()" class="editButton">Editar</button>
-                                </ng-container>
-                                
-                                  <ng-template #publicacaoSelect>
-                                    <select id="publicacaoSelect" [(ngModel)]="selectedPublicacao">
-                                      <option *ngFor="let option of publicacaoOptions" [value]="option.value">
-                                        {{ option.label }}
-                                      </option>
-                                    </select>
-                                    <button (click)="confirmarPublicacao()" class="editButton">Confirmar</button>
-                                    <button (click)="togglePublicacao()" class="editButton">Cancelar</button>
-                                  </ng-template>
+                                <div>
+                                    <!-- <ng-container *ngIf="publicacaoContent; else publicacaoSelect">
+                                        <p id="publicacao">
+                                        {{ post.publicacao ? post.publicacao : 'Imediata' }}
+                                        </p>
+                                        <button (click)="togglePublicacao()" class="editButton">Editar</button>
+                                    </ng-container> -->
+                                    
+                                    <div class="publicacaoWrapper">
+                                        <div class="selectWrapper">
+                                            <div *ngIf="publicacaoContent" class="selectWrapper">
+                                            <p id="publicacao">
+                                                {{ post.publicacao ? post.publicacao : 'Imediata' }}
+                                            </p>
+                                            <button (click)="togglePublicacao()" class="editButton">Editar</button>
+                                            </div>
+
+                                            <div *ngIf="!publicacaoContent" class="selectWrapper">
+                                            <select id="publicacaoSelect" [(ngModel)]="selectedPublicacao">
+                                                <option *ngFor="let option of publicacaoOptions" [value]="option.value">
+                                                {{ option.label }}
+                                                </option>
+                                            </select>
+                                            <button (click)="confirmarPublicacao()" class="editButton">Confirmar</button>
+                                            <button (click)="togglePublicacao()" class="editButton">Cancelar</button>
+                                            </div>
+                                    </div>
+
+                                        <input
+                                        type="date"
+                                        [min]="minDate"
+                                        [value]="minDate"
+                                        (change)="onDateChange($event)"
+                                        *ngIf="post.publicacao == 'AGENDADA'"
+                                        />
+                                    </div>
+                                </div>
                                 <!-- <button #editarPublicacao class="editButton">{{ publicacaoContent ? "Editar" : "Cancelar"}}</button> -->
                             </div>
                             <div class="statusDiv">
                                 <p>Status:</p>
-                                <ng-template [ngIf]="post.id" [ngIfElse]="statusSelect">
-                                    <p id="idStatus">{{post.status}}</p>
-                                </ng-template>
-                                <ng-template #statusSelect>
-                                    <p id="idStatus">RASCUNHO</p>
-                                </ng-template>
+                                <div>
+                                    <ng-template [ngIf]="post.id" [ngIfElse]="statusSelect">
+                                        <p id="idStatus">{{post.status}}</p>
+                                    </ng-template>
+                                    <ng-template #statusSelect>
+                                        <p id="idStatus">RASCUNHO</p>
+                                    </ng-template>
+                                </div>
                                 <!-- <button #editarStatus class="editButton">Editar</button> -->
                             </div>
                         </div>
