feat: Adicionada e implementada funcionalidade de escolher a data de publicação do post

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -111,11 +111,11 @@
                                     </div>
 
                                         <input
-                                        type="date"
-                                        [min]="minDate"
-                                        [value]="minDate"
-                                        (change)="onDateChange($event)"
-                                        *ngIf="post.publicacao == 'AGENDADA'"
+                                            type="datetime-local"
+                                            [min]="post.data || minDateTime"
+                                            [value]="post.data || minDateTime"
+                                            (change)="onDateTimeChange($event)"
+                                            *ngIf="post.publicacao === 'AGENDADA'"
                                         />
                                     </div>
                                 </div>
