style: Começando uma mudança de estilo e posição dos botões

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -304,3 +304,8 @@ div#imagemCapaPost img{
 p#perguntaImagem {
     margin: 10px auto;
 }
+
+div.buttonHandle {
+    display: flex;
+    flex-direction: row;
+}
