feat: Implementação do código para extrair conteúdo de tags de imagens e substituir temporariamente por id substituível no back-end

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -33,6 +33,11 @@
               <div class="col">
                   <button class="btn" id="buttonSave" (click)="saveContent()">Salvar</button>
               </div>
+              <div class="col">
+                    <button type="button" class="btn btn-primary mt-2" (click)="testarEnvio()">
+                        Testar Envio
+                    </button>
+              </div>
           </div>
       </div>
       <!-- class="col-12 col-lg-3"  -->
