--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -101,6 +101,8 @@ button.btn.btn-link:not(#buttonSave) {
 div#accordion {
     margin: 10px 0;
     padding: 8px 0;
+    position: sticky;
+    top: 10px;
 }
 
 button#buttonSave {
@@ -286,6 +288,8 @@ div#imagemCapaPost {
     width: 100%;
     box-shadow: none;
     outline: none;
+    max-height: 250px;
+    overflow-y: auto;
 }
 
 .preview-img {
