--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -22,6 +22,7 @@
                     <div id="postAction" #postAction *ngIf="post.usuario?.id == usuario.id  || usuario.cargo == 'EDITOR'">
                         <button #deleteButton [attr.data-post-id]="post.id"><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
                         <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
+                        <button #cancelButton [attr.data-post-id]="post.id"><i class="bi bi-hand-thumbs-down" style="font-weight: bold;"></i></button>
                     </div>
                 </div>
                 <div class="postData">
