--- a/ifac_si_app/src/app/component/delete-form/delete-form.component.css
+++ b/ifac_si_app/src/app/component/delete-form/delete-form.component.css
@@ -13,15 +13,17 @@
 
 .popUp {
     font-weight: 600;
-    height: 40%;
-    width: 40%;
+    width: fit-content;
+    height: fit-content;
+    min-width: 300px;
+    max-width: 90vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     /* display: flex; */
     text-align: center;
-    padding: 10px;
+    padding: 30px 40px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
