--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -8,8 +8,8 @@
         <app-delete-form 
         [messageLine1]="getMensagemLinha1()"
         [messageLine2]="getMensagemLinha2()"
-        (cancelForm)="showDelete()" 
-        (confirmForm)="deletePost()">    
+        (cancelForm)="showModal()" 
+        (confirmForm)="confirmarAcao()">    
         </app-delete-form>
     </div>
     <div class="container">
@@ -27,7 +27,7 @@
                     <div id="postAction" #postAction *ngIf="post.usuario?.id == usuario.id  || usuario.cargo == 'EDITOR'">
                         <button #deleteButton [attr.data-post-id]="post.id"><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
                         <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
-                        <button #reprovButton [attr.data-post-id]="post.id" *ngIf="usuario.cargo == 'EDITOR'" [attr.data-post-id]="post.id"><i class="bi bi-hand-thumbs-down" style="font-weight: bold;"></i></button>
+                        <button #reprovButton [attr.data-post-id]="post.id" *ngIf="usuario.cargo == 'EDITOR'"><i class="bi bi-hand-thumbs-down" style="font-weight: bold;"></i></button>
                     </div>
                 </div>
                 <div class="postData">
